<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GlucoControl</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_messung">MainActivity</string>
    <string name="action_add">Hinzufuegen</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>\nÜbersicht</item>
        <item>\nMessungen</item>
        <item>\nMahlzeiten</item>
        <item>\nEinstellungen</item>
        <item>\nStatistik</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/uebersicht</item>
        <item>@drawable/messung</item>
        <item>@drawable/mahlzeit</item>
        <item>@drawable/einstellung</item>
        <item>@drawable/statistik</item>
    </array>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>


    <string name="legend_name">Messpunkte</string>
    <string name="code">Kalibrierungscode ändern</string>
    <string name="newdevice">Neues Gerät hinzufügen</string>
    <string name="info">Informationen</string>
    <string name="paireddevices">Gekoppelte Geräte</string>
    <string name="login">Login </string>
    <string name="user">Username :</string>
    <string name="username">Username</string>
    <string name="name">Name :</string>
    <string name="nachname">Nachname</string>
    <string name="vorname">Vorname :</string>
    <string name="voRname">Vorname</string>
    <string name="email">E-Mail :</string>
    <string name="emailhint">E-Mail Adresse</string>
    <string name="passwort">Passwort :</string>
    <string name="passwortrepeat">Passwort wiederholen:</string>
    <string name="meal">Mahlzeiten</string>
    <string name="usernamelogin">Username :</string>
    <string name="register">Registrieren</string>
    <string name="confirm">Bestätigen</string>
    <string name="infotext">Diese App wurde als Studienprojekt von Tobias Walter, Maximilian Mock, Christian Murlowski erstellt und von Maximilian Mock in der Praxisphase weiterentwickelt. </string>
    <string name="pin">Kopplungs-PIN: </string>
    <string name="changecode">Code ändern</string>
    <string name="messung">Messung hinzufügen</string>
    <string name="uhrzeit">Uhrzeit</string>
    <string name="datum">Datum</string>
    <string name="wert">Wert</string>
    <string name="meseinheit">Maßeinheit</string>
    <string name="add">Hinzufügen</string>
    <string name="addmeal">Neue Mahlzeit / Zwischenmahlzeit hinzufügen</string>
    <string name="art">Mahlzeit</string>
    <string name="essensart">Art des Gerichts</string>
    <string name="adddevice">Neues GlucoTel - Messgerät hinzufügen</string>
    <string name="kopplungspin">Kopplungs-PIN: </string>
    <string name="addcode">9676</string>
    <string name="infopin">Info: Dieser Kopplungs-Pin dient dazu, um eine Verbindung zu dem GlucoTel aufzubauen.</string>
    <string name="search">Suchen</string>
    <string name="abbrechen">Cancel</string>
    <string name="apply">Apply</string>


</resources>
