<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true">

    <TextView
        android:id="@+id/tv_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/usernamelogin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_username_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Test"
        android:hint="Username"/>

    <TextView
        android:id="@+id/et_passwort_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/passwort"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:text="Testpw"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/login" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:orientation="vertical"
            android:paddingTop="16dip"
            android:showDividers="beginning">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureWithLargestChild="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_leftSpacer"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt_register"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:filterTouchesWhenObscured="true"
                    android:maxLines="2"
                    android:text="@string/register" />

                <LinearLayout
                    android:id="@+id/ll_rightSpacer"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>




    </RelativeLayout>

</RelativeLayout>